--- a/frontend/src/app/components/match/match.component.css
+++ b/frontend/src/app/components/match/match.component.css
@@ -105,3 +105,41 @@ button:hover {
     transition: background-color 0.5s;
     background-color: darkred;
 }
+
+.div-no-matches {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    margin-top: 8.5rem;
+}
+
+.div-text {
+    text-align: center;
+    font-size: 11pt;
+    width: 38.5%; 
+    padding: 20px;
+    background-color: rgb(244, 244, 244);
+    border-radius: 10px;
+    box-shadow: 5px 5px 5px #aaaa;
+}
+
+#text-match {
+    font-size: 12pt;
+}
+
+a {
+    text-decoration: none;
+    color: red;
+    padding: 5px 5px;
+    border-radius: 5px;
+    transition: 0.5s;
+}
+
+a:hover {
+    transition: color 0.5s;
+    transition: background-color 0.5s;
+    color: white;
+    background-color: crimson;
+}
