--- a/frontend/src/app/components/handler-playpage/handler-playpage.component.html
+++ b/frontend/src/app/components/handler-playpage/handler-playpage.component.html
@@ -35,6 +35,7 @@
         </div>
         <div class="div-button">
             <div class="button-play"><button (click)="playStory(item)">Gioca</button></div>
+            <div class="button-preview"><button (click)="openPreview(item)">Anteprima</button></div>
         </div>
     </div>
 </div>
