--- a/frontend/src/app/components/create-story/create-story.component.css
+++ b/frontend/src/app/components/create-story/create-story.component.css
@@ -57,6 +57,17 @@ span {
     margin-top: 1rem;
 }
 
+.div-button-final {
+    display: inline-block;
+    text-align: center;
+    width: 100%;
+    margin-top: 1rem;
+}
+
+#button-final {
+    width: 100%;
+}
+
 .div-button-scenario {
     width: 100%;
     margin-top: 1rem;
