refactoring e aggiunto l'hover sul required della scelta

--- a/frontend/src/app/components/play-page/play-page.component.css
+++ b/frontend/src/app/components/play-page/play-page.component.css
@@ -94,11 +94,6 @@ a:hover {
     border: none !important;
 }
 
-.container-tooltip {
-    position: relative;
-    display: inline-block;
-}
-
 .remove-button {
     text-align: center;
     width: 100%;
@@ -185,4 +180,57 @@ button:hover {
     color: white;
     background-color: crimson;
     border: 3px solid rgb(0, 0, 0, 0.7);
+}
+
+.tooltiptext {
+    visibility: hidden;
+    width: 200px;
+    background-color: black;
+    color: #fff;
+    text-align: center;
+    border-radius: 6px;
+    padding: 5px 0;
+
+  
+    position: absolute;
+    z-index: 1;
+    bottom: 100%;
+    left: 50%;
+    margin-left: -100px;
+
+
+    opacity: 0;
+    transition: opacity 1.0s;
+}
+
+.container-tooltip {
+    position: relative;
+    display: inline-block;
+}
+
+.button-multiple-choice:disabled {
+    cursor: not-allowed;
+}
+
+.disabled-tooltip-container .tooltiptext {
+    visibility: hidden;
+    width: 200px;
+    background-color: black;
+    color: white;
+    text-align: center;
+    border-radius: 6px;
+    padding: 5px 0;
+    position: absolute;
+    z-index: 1;
+    bottom: 100%;
+    left: 50%;
+    transform: translateX(-50%);
+    /* Transizioni per un'apparizione graduale */
+    opacity: 0;
+    transition: opacity 0.5s ease-in-out;
+}
+
+.disabled-tooltip-container:hover .tooltiptext {
+    visibility: visible;
+    opacity: 1;
 }
