--- a/frontend/src/app/components/payment-page/payment-page.component.html
+++ b/frontend/src/app/components/payment-page/payment-page.component.html
@@ -7,7 +7,7 @@
         <form (ngSubmit)="onSubmit()">
             <div class="div-form">
                 <label for="amount">Ammontare<span>*</span></label>
-                <input type="amount" id="amount" name="amount" required [(ngModel)]="amount" >
+                <input type="number" id="amount" name="amount" required [(ngModel)]="amount" >
             </div>
             <div class="div-form">
                 <label for="cardHolder">Titolare della carta<span>*</span></label>
