--- a/frontend/src/app/components/payment-page/payment-page.component.css
+++ b/frontend/src/app/components/payment-page/payment-page.component.css
@@ -2,6 +2,18 @@
     font-family: Arial, Helvetica, sans-serif;
 }
 
+/* Chrome, Safari, Edge, Opera */
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+}
+
+/* Firefox */
+input[type=number] {
+    -moz-appearance: textfield;
+}
+
 .container {
     display: flex;
     align-items: center;
