--- a/frontend/src/app/components/form-multiple-choice/form-multiple-choice.component.html
+++ b/frontend/src/app/components/form-multiple-choice/form-multiple-choice.component.html
@@ -13,8 +13,8 @@
                 <div class="single-form">
                     <label for="idScenarioSuccessivo">Scenario successivo alla risposta<span>*</span></label>
                     <select id="idScenarioSuccessivo" name="idScenarioSuccessivo" required [(ngModel)]="idScenarioSuccessivo">
-                        <option disabled>Id dello scenario successivo</option>
-                        <option *ngFor="let scenario of storyScenarios" [value]="scenario.id">{{ scenario.testo }} [ID: {{scenario.id }}]</option>
+                        <option disabled>Testo dello scenario successivo</option>
+                        <option *ngFor="let scenario of storyScenarios" [value]="scenario.id">{{ scenario.testo }}</option>
                     </select>
                 </div>
                 <div class="single-form">
