--- a/frontend/src/app/components/form-multiple-choice/form-multiple-choice.component.html
+++ b/frontend/src/app/components/form-multiple-choice/form-multiple-choice.component.html
@@ -8,7 +8,7 @@
             <form (ngSubmit)="onSubmit()">
                 <div class="single-form">
                     <label for="testo">Testo<span>*</span></label>
-                    <textarea id="testo" name="testo" required [(ngModel)]="testo"></textarea>
+                    <textarea id="testo" name="testo" maxlength="50" required [(ngModel)]="testo"></textarea>
                 </div>
                 <div class="single-form">
                     <label for="idScenarioSuccessivo">Scenario successivo alla risposta<span>*</span></label>
