--- a/frontend/src/app/components/form-single-choice/form-single-choice.component.html
+++ b/frontend/src/app/components/form-single-choice/form-single-choice.component.html
@@ -5,17 +5,17 @@
         <form (ngSubmit)="onSubmit()">
             <div>
                 <label id="label-left" for="testo">Testo<span>*</span></label>
-                <textarea id="testo" name="testo" [(ngModel)]="testo" required></textarea>
+                <textarea id="testo" name="testo" maxlength="50" [(ngModel)]="testo" required></textarea>
             </div>
             <div>
                 <label id="label-left" for="risposta">Risposta<span>*</span></label>
-                <textarea id="risposta" name="risposta" [(ngModel)]="risposta" required></textarea>
+                <textarea id="risposta" name="risposta" maxlength="50" [(ngModel)]="risposta" required></textarea>
             </div>
             <div class="div-select">
                 <label for="idScenarioRispostaCorretta">Destinazione risposta corretta<span>*</span></label>
                 <select id="idScenarioRispostaCorretta" name="idScenarioRispostaCorretta"
                     [(ngModel)]="idScenarioRispostaCorretta" required>
-                    <option disabled>Identificativo dello scenario dopo la risposta corretta</option>
+                    <option disabled>Testo dello scenario dopo la risposta corretta</option>
                     <option *ngFor="let scenario of storyScenarios" [value]="scenario.id">{{ scenario.testo }}</option>
                 </select>
             </div>
@@ -23,7 +23,7 @@
                 <label for="idScenarioRispostaSbagliata">Destinazione risposta sbagliata<span>*</span></label>
                 <select id="idScenarioRispostaSbagliata" name="idScenarioRispostaSbagliata"
                     [(ngModel)]="idScenarioRispostaSbagliata" required>
-                    <option disabled>Identificativo dello scenario dopo la risposta errata</option>
+                    <option disabled>Testo dello scenario dopo la risposta errata</option>
                     <option *ngFor="let scenario of storyScenarios" [value]="scenario.id">{{ scenario.testo }}</option>
                 </select>
             </div>
